# automated-futures-trading-cpp

./: CMakeLists.txt  README.md  main.cpp
ctp/traderapi/: ThostFtdcTraderApi.h  ThostFtdcUserApiStruct.h
